--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "react": "^16.7.0-alpha.0",
     "react-dom": "^16.7.0-alpha.0",
     "react-scripts": "2.1.1",
+    "styled-components": "^4.1.1",
     "typescript": "3.1.6",
     "uuid": "^3.3.2"
   },
@@ -29,6 +30,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@types/styled-components": "^4.1.0",
     "@types/uuid": "^3.4.4",
     "prettier": "^1.14.3",
     "tslint": "^5.11.0",
