--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "lib": ["dom", "es2016", "es2017.object"],
     "target": "es5",
     "allowJs": true,
     "skipLibCheck": false,
