--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "@types/styled-components": "^4.1.0",
     "@types/uuid": "^3.4.4",
     "prettier": "^1.14.3",
+    "ts-key-enum": "^2.0.0",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.15.0",
     "tslint-plugin-prettier": "^2.0.1"
